configurable emoji refactor